@@ -1,0 +1,2 @@
+sd s(N:Num) := match N:Num .
+Bye.
