@@ -1,0 +1,2 @@
+sd h(N:Y$Little) := match N:Y$Little .
+Bye.
